Replace outdated CSS files for block editor and theme with new versions, enhancing visual consistency and responsiveness. Update asset manifest to reflect new file names and ensure proper integration of styles. Add hidden class to layout SCSS for improved element visibility control.

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -355,3 +355,7 @@ hr {
 .bg-beige {
     background-color: var(--beige);
 }
+
+.hidden{
+    display: none;
+}
